--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "url": "git+https://github.com/nkt/eslint-plugin-es5.git"
   },
   "scripts": {
-    "test": "mocha ./tests/index.js"
+    "test": "mocha ./tests/index.js",
+    "preversion": "npm test",
+    "postversion": "npm publish",
+    "postpublish": "git push --follow-tags"
   },
   "devDependencies": {
     "eslint": "^3.12.2",
