--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-es5",
   "version": "0.3.0",
-  "description": "ESLint plugin deny ES2015",
+  "description": "ESLint plugin for ES5 users.",
   "keywords": [
     "eslint",
     "eslintplugin",
