chore: format code with Prettier
https://prettier.io/
https://github.com/prettier/eslint-plugin-prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,18 @@
 {
-  "extends": "eslint:recommended",
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "ecmaVersion": 2015
   },
   "env": {
     "node": true
+  },
+  "plugins": [
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": "error"
   }
 }
